<resources>
    <string name="app_name">Bonny PHC</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="failure">Failure!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="msg_add_baby">Click \'+\' button to add a baby</string>
    <string name="all_babies">All babies</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_baby">Add baby</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="enter_parent_name">Enter parent name</string>
    <string name="place_of_birth">Place of birth</string>
    <string name="weight">Weight</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="time_of_birth">Time of birth</string>
    <string name="nfc_is_enabled">NFC is enabled</string>
    <string name="tag_not_ndef_formattable">Tag not NDEF formattable</string>
    <string name="tag_written">Tag written</string>
    <string name="tag_not_writeable">Tag not writeable</string>
    <string name="write_failed">Write failed</string>
    <string name="tag_id">Tag ID</string>
    <string name="special_notes">Special notes(allergies, etc)</string>
    <string name="cannot_be_empty">Cannot be empty!</string>
    <string name="baby_created">Baby created.</string>
    <string name="all_fields_required">All fields are required!</string>
    <string name="success">Success.</string>
    <string name="veryfying">Verifying…</string>
    <string name="invalid_credentials">Invalid credentials!</string>
    <string name="unable_to_fetch_profile">Unable to fetch profile! Please try again later.</string>
    <string name="updating_parent_list">Updating parent list…</string>
    <string name="title_activity_baby_details">Details</string>
    <string name="please_wait">Please wait…</string>
    <string name="schedule">Schedule</string>
    <string name="getting_schedule">Getting schedule…</string>
    <string name="schedule_a_vaccine">Schedule vaccine(s)</string>
    <string name="amount">Amount (in ml)</string>
    <string name="history">History</string>
    <string name="getting_history">Getting history…</string>
    <string name="bottom_sheet_peek">Bottom sheet peek</string>
    <string name="bottom_sheet_content">Bottom sheet content</string>
    <string name="added_for_schedule">Added for schedule.</string>
    <string name="removed_from_schedule">Removed from schedule.</string>
    <string name="vaccines">vaccine(s)</string>
    <string name="select_dose_mfg">Select dose manufacturer.</string>
    <string name="please_specify_dose_amount">Please specify dose amount.</string>
    <string name="vaccines_added_for_shcedule">vaccine(s) added for schedule.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="phc_details">Primary Health Care Center Details</string>
    <string name="list_of_vaccines">List of Vaccines</string>
    <string name="creating_appointment">Creating appointment…</string>
    <string name="scheduling_vaccines">Scheduling vaccines…</string>
    <string name="vaccines_shceduled">Vaccines scheduled</string>
    <string name="pending">Pending</string>
    <string name="scheduled">Scheduled</string>
    <string name="administered">Administered</string>
    <string name="mark_accepted">Accept</string>
    <string name="mark_rejected">Reject</string>
    <string name="session_expired">Session expired. Please login again.</string>
    <string name="cancelled">Cancelled</string>
    <string name="mark_administered">Administer</string>
    <string name="mark_cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="update_details">Update details</string>
    <string name="scan_the_card">Scan the card</string>
    <string name="device_is_not_nfc_supported">This device is not NFC supported.</string>
    <string name="scanning_for_a_card">Scanning for a card…</string>
    <string name="redirecting">Record found. Redirecting.</string>
    <string name="cannot_schedule_because_of_cooldown_period">Cannot schedule vaccine because of cooldown period.</string>
    <string name="previous_appointments_should_be_completed_to_make_new_one">Previous appointments should be completed to make new one.</string>
</resources>
